syntax = "proto3";
package sifnode.oracle.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/coin.proto";

option go_package = "github.com/Sifchain/sifnode/x/dispensation/types";

// GenesisState - all clp state that must be provided at genesis
//TODO: Add parameters to Genesis state ,such as minimum liquidity required to create a pool
message GenesisState {
  repeated string address_whitelist = 1;
  string          admin_address     = 2;
}

message DistributionRecord {
  string claim_status                  = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"claim_status\""
  ];
  string distribution_name             = 2;
  string recipient_address             = 3;
  repeated cosmos.base.v1beta1.Coin coins = 4 [
    (gogoproto.nullable)     = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags)     = "yaml:\"coins\""
  ];
  string distribution_start_height     = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"distribution_start_height\""
  ];
  string distribution_completed_height = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"distribution_completed_height\""
  ];
}

message DistributionRecords {
  repeated DistributionRecord distribution_records = 1;
}

message DistributionRecordsResponse {
  DistributionRecords distribution_records = 1;
  string height = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"height\""
  ];
}