syntax = "proto3";
package sifnode.ethbridge.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/Sifchain/sifnode/x/ethbridge/types";

// EthBridgeClaim is a structure that contains all the data for a particular bridge claim
message EthBridgeClaim {
  int64  ethereum_chain_id        = 1 [(gogoproto.moretags) = "yaml:\"ethereum_chain_id\""];
  // bridge_contract_address is an EthereumAddress
  string bridge_contract_address = 2 [(gogoproto.moretags) = "yaml:\"bridge_contract_address\""];
  int64  nonce                   = 3 [(gogoproto.moretags) = "yaml:\"nonce\""];
  string symbol                  = 4 [(gogoproto.moretags) = "yaml:\"symbol\""];
  // token_contract_address is an EthereumAddress
  string token_contract_address  = 5 [(gogoproto.moretags) = "yaml:\"token_contract_address\""];
  // ethereum_sender is an EthereumAddress
  string ethereum_sender         = 6 [(gogoproto.moretags) = "yaml:\"ethereum_sender\""];
  // cosmos_receiver is an sdk.AccAddress
  string cosmos_receiver         = 7 [(gogoproto.moretags) = "yaml:\"cosmos_receiver\""];
  // validator_address is an sdk.ValAddress
  string validator_address       = 8 [(gogoproto.moretags) = "yaml:\"validator_address\""];
  string amount                  = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"amount\""
  ];
  ClaimType claim_type = 10;
}

message PeggyTokens {
  repeated string tokens = 1;
}

// Claim type enum
enum ClaimType {
  // Unspecified claim type
  CLAIM_TYPE_UNSPECIFIED = 0;
  // Lock claim type
  CLAIM_TYPE_LOCK        = 1;
  // Burn claim type
  CLAIM_TYPE_BURN        = 2;
}

// OracleClaim contains data required to make an OracleClaim
message OracleClaim {
  string prophecy_id = 1;
  bytes message      = 2;
  bytes signature    = 3;
}

// ProphecyClaim contains data required to make a ProphecyClaim
message ProphecyClaim {
  bytes cosmos_sender           = 1;
  string symbol                 = 2;
  string amount                 = 3;
  bytes ethereum_receiver       = 4;
  string claim_type             = 5;
  bytes cosmos_sender_sequence  = 6;
}